[gd_scene load_steps=7 format=3 uid="uid://dm3jqcbop4egp"]

[ext_resource type="FontFile" uid="uid://dl446fh22pgq2" path="res://graphics/fonts/Computerfont.ttf" id="1_55pka"]
[ext_resource type="Script" path="res://scenes/user_interface/ui.gd" id="1_fkd1u"]

[sub_resource type="LabelSettings" id="LabelSettings_x5456"]
font = ExtResource("1_55pka")
font_size = 36
font_color = Color(0.203922, 0.929412, 1, 1)
shadow_size = 7
shadow_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_hd2dg"]
font = ExtResource("1_55pka")
font_size = 36
font_color = Color(0.203922, 0.929412, 1, 1)
shadow_size = 6
shadow_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_mxy82"]
font = ExtResource("1_55pka")
font_size = 36
font_color = Color(0.203922, 0.929412, 1, 1)
shadow_size = 6
shadow_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_kvk5q"]
font = ExtResource("1_55pka")
font_size = 36
font_color = Color(0.203922, 0.929412, 1, 1)
shadow_size = 6
shadow_color = Color(0, 0, 0, 1)

[node name="UI" type="CanvasLayer"]
script = ExtResource("1_fkd1u")

[node name="HiScoreCounter" type="Control" parent="."]
layout_mode = 3
anchor_left = 0.05
anchor_top = 0.02
anchor_right = 0.27
anchor_bottom = 0.1
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 0
size_flags_vertical = 8

[node name="Label" type="Label" parent="HiScoreCounter"]
layout_mode = 0
offset_right = 85.0
offset_bottom = 39.0
text = "Hi-Score"
label_settings = SubResource("LabelSettings_x5456")

[node name="Score" type="Label" parent="HiScoreCounter"]
layout_direction = 2
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -85.0
offset_bottom = 39.0
grow_horizontal = 0
text = "000000"
label_settings = SubResource("LabelSettings_hd2dg")
horizontal_alignment = 2

[node name="ScoreCounter" type="Control" parent="."]
layout_mode = 3
anchor_left = 0.05
anchor_top = 0.09
anchor_right = 0.27
anchor_bottom = 0.17
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 0
size_flags_vertical = 8

[node name="Label" type="Label" parent="ScoreCounter"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.158
anchor_right = 0.213
offset_right = 85.0
offset_bottom = 39.0
text = "Score"
label_settings = SubResource("LabelSettings_x5456")

[node name="Score" type="Label" parent="ScoreCounter"]
layout_direction = 2
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -85.0
offset_bottom = 39.0
grow_horizontal = 0
text = "000000"
label_settings = SubResource("LabelSettings_hd2dg")
horizontal_alignment = 2

[node name="TimeCounter" type="Control" parent="."]
layout_mode = 3
anchor_left = 0.82
anchor_top = 0.02
anchor_right = 0.98
anchor_bottom = 0.02
offset_right = -15.4
offset_bottom = 40.0

[node name="Label" type="Label" parent="TimeCounter"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -19.5
offset_right = 73.0
offset_bottom = 19.5
grow_vertical = 2
size_flags_horizontal = 0
text = "TIME"
label_settings = SubResource("LabelSettings_mxy82")

[node name="Time" type="Label" parent="TimeCounter"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -60.0
offset_top = -19.5
offset_bottom = 19.5
grow_horizontal = 0
grow_vertical = 2
size_flags_horizontal = 8
size_flags_vertical = 1
text = "999"
label_settings = SubResource("LabelSettings_kvk5q")
